@@ -1,3 +1,11 @@
+*** 20010717_1 by lusky
+massive cleanup of gcc warnings
+
+
+*** 20010716_3 by leeh
+- dont show IPs in stats P either..
+
+
 *** 20010716_2 by leeh
 - this should be extended to ltrace/stats L.. 
 
